Fix the Gap problem - classList isn t working -> add the styletext direct

--- a/style.css
+++ b/style.css
@@ -9,16 +9,13 @@
     
    
     grid-template-columns: repeat(16, 25px [col-start]);
-    row-gap: 0;
-    column-gap: 0
+    
 }
 
 .square {
     height: 5px;
     width: 5px;
-    padding: 5px;
-    margin: 5px;
-    /*border: 1px solid black;*/
-    text-align: center;
-    background-color: black;
+    
+    border: 1px solid black;
+   
 }
